--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The InscribeCo</title>
     <style>
-        /* General Body Styling */
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
@@ -14,12 +13,45 @@
             background-color: #f5f5f5;
         }
 
-        /* Top Bar Styling */
+        header {
+            background-color: rgba(255, 255, 255, 0.3);
+            color: black;
+            width: 100%;
+            position: fixed;
+            top: 0;
+            z-index: 1000;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            backdrop-filter: blur(50px);
+        }
+
+        .sentence {
+            font-size: 2rem;
+            color: white;
+            position: relative;
+            display: inline-block;
+            font-family: Arial, sans-serif;
+    font-weight: bold; /* or 700 for bold */
+        }
+
+        .changing-words::after {
+            content: '|';
+            animation: blink 0.10s step-end infinite;
+            font-weight: normal;
+            margin-left: 7px;
+        }
+
+        @keyframes blink {
+            50% {
+                opacity: 0;
+            }
+        }
+
         .top-bar {
             background-color: lightgrey;
             color: black;
             padding: 10px 0;
             text-align: center;
+            font-family: 'Arial', sans-serif;
             position: fixed;
             width: 100%;
             top: 0;
@@ -28,6 +60,13 @@
             justify-content: center;
             align-items: center;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+            /* Adding shadow */
+        }
+
+        .phone-icon {
+            width: 20px;
+            height: 20px;
+            margin-right: 10px;
         }
 
         .top-bar a {
@@ -39,22 +78,16 @@
             text-decoration: underline;
         }
 
-        .phone-icon {
-            width: 20px;
-            height: 20px;
-            margin-right: 10px;
+        header {
+            margin-top: 40px;
+            /* Adjusts the header position below the top bar */
         }
 
-        /* Header and Navigation Styling */
-        header {
-            background-color: rgba(255, 255, 255, 0.3);
-            color: black;
-            width: 100%;
-            position: fixed;
-            top: 40px;
-            z-index: 1000;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            backdrop-filter: blur(50px);
+
+
+        .hamburger {
+            display: none;
+            /* Show by default */
         }
 
         nav {
@@ -75,8 +108,10 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
+
         .nav-links {
             display: flex;
+            /* Display nav links in desktop view */
         }
 
         .nav-links li {
@@ -96,13 +131,11 @@
             transform: scale(1.1);
         }
 
-        .hamburger {
-            display: none;
-            cursor: pointer;
-            font-size: 2rem;
-        }
 
-        /* Hero Section */
+
+
+
+
         .hero {
             height: 100vh;
             background: url('images/Artboard.jpg') no-repeat center center/cover;
@@ -120,7 +153,14 @@
 
         .hero h1 {
             font-size: 2rem;
-            font-weight: bold;
+            color: Dark blue;
+            font-family: Arial, sans-serif;
+    font-weight: bold; /* or 700 for bold */
+        }
+
+        .hero p {
+            font-size: 1.25rem;
+            color: #ddd;
         }
 
         .hero button {
@@ -139,93 +179,510 @@
             transform: scale(1.1);
         }
 
-        /* Mobile Menu Styling */
-        @media (max-width: 768px) {
-            .nav-links {
-                display: none;
-                flex-direction: column;
-                position: absolute;
-                top: 60px;
-                right: 0;
-                background-color: rgba(255, 255, 255, 0.9);
-                width: 100%;
-                padding: 1rem;
-                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-                border-radius: 8px;
-                animation: slideDown 0.4s ease-out;
-            }
-
-            .nav-links li {
-                margin: 0.5rem 0;
-            }
-
-            .nav-links a {
-                text-align: center;
-                background-color: rgba(0, 123, 255, 0.6);
-                color: white;
-                padding: 1rem;
-                border-radius: 5px;
-                font-size: 1.2rem;
-            }
-
-            .hamburger {
-                display: block;
-            }
-
-            .nav-links.active {
-                display: flex;
-            }
-        }
-
-        @keyframes slideDown {
-            from {
-                transform: translateY(-100%);
-            }
-            to {
-                transform: translateY(0);
-            }
-        }
-
-        /* Footer */
         footer {
             background-color: #333;
+            /* Dark background */
             color: #fff;
+            /* White text */
             padding: 20px;
+            /* Padding */
             text-align: center;
+            /* Center text */
+        }
+
+        .footer-content p {
+            margin: 5px 0;
+            /* Space between paragraphs */
         }
 
         .footer-bottom {
             border-top: 1px solid #444;
+            /* Top border */
             margin-top: 10px;
+            /* Margin above */
             padding-top: 10px;
+            /* Padding above */
         }
 
-        /* Smooth Fade-in Animation */
+        .features {
+
+            padding: 3rem 1rem;
+            text-align: center;
+
+
+        }
+
+        .features h2 {
+            font-size: 2rem;
+            margin-bottom: 2rem;
+        }
+
+        .feature {
+            display: inline-block;
+            width: 30%;
+            margin: 1rem;
+            text-align: center;
+            background-color: whitesmoke;
+        }
+
+        .feature img {
+            width: 100px;
+            height: 100px;
+        }
+
+        .feature h3 {
+            margin-top: 1rem;
+            font-size: 1.25rem;
+        }
+
+
+
+        .testimonials {
+            padding: 3rem 1rem;
+            background-color: white;
+            text-align: center;
+        }
+
+        .testimonials h2 {
+            font-size: 2rem;
+            margin-bottom: 2rem;
+        }
+
+        .testimonial {
+            padding: 1.5rem;
+            margin: 1rem;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .testimonial:hover {
+            transform: translateY(-10px);
+        }
+
+        .testimonial p {
+            font-size: 1rem;
+            color: #333;
+        }
+
+        .testimonial span {
+            display: block;
+            margin-top: 1rem;
+            font-size: 0.875rem;
+            color: #555;
+        }
+
+        .faq {
+            padding: 3rem 1rem;
+            background-color: #f0f0f0;
+            text-align: center;
+        }
+
+        .faq h2 {
+            font-size: 2rem;
+            margin-bottom: 2rem;
+        }
+
+        .question {
+            margin-bottom: 2rem;
+            padding: 1rem;
+            background-color: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            transition: transform 0.3s ease;
+        }
+
+        .question:hover {
+            transform: translateY(-5px);
+        }
+
+        .question h3 {
+            font-size: 1.25rem;
+            color: #007BFF;
+            margin-bottom: 0.5rem;
+        }
+
+        .question p {
+            font-size: 1rem;
+            color: #333;
+        }
+
+        .samples {
+            padding: 3rem 1rem;
+            text-align: center;
+            background-color: #f9f9f9;
+            /* Light background color */
+        }
+
+        .samples h2 {
+            font-size: 2rem;
+            margin-bottom: 2rem;
+        }
+
+        .sample-container {
+            display: flex;
+            flex-wrap: wrap;
+            /* Allow items to wrap in smaller screens */
+            justify-content: center;
+            /* Center the samples */
+        }
+
+        .sample {
+            background-color: white;
+            /* White background for samples */
+            margin: 1rem;
+            padding: 5rem;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+            width: calc(33% - 2rem);
+            /* Three in a row with margins */
+        }
+
+        .sample img {
+            width: 100%;
+            /* Make the image responsive */
+            border-radius: 10px;
+            /* Round the corners of the image */
+        }
+
+        .sample h3 {
+            font-size: 1.25rem;
+            margin: 1rem 0 0.5rem;
+        }
+
+        .sample p {
+            font-size: 1rem;
+            color: #666;
+            /* Dark grey for text */
+        }
+
+        .download-link {
+            display: inline-block;
+            /* Allows padding and margin */
+            margin-top: 1rem;
+            padding: 0.5rem 1rem;
+            background-color: #007BFF;
+            /* Button color */
+            color: white;
+            /* Text color */
+            border-radius: 5px;
+            text-decoration: none;
+            /* Remove underline */
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+
+        .download-link:hover {
+            background-color: #0056b3;
+            /* Darker shade on hover */
+            transform: scale(1.05);
+            /* Slightly enlarge on hover */
+        }
+
+        .pricing {
+            padding: 3rem 1rem;
+            background-color: #e0e0e0;
+            text-align: center;
+        }
+
+        .pricing h2 {
+            font-size: 2rem;
+            margin-bottom: 2rem;
+            color: #333;
+        }
+
+        .pricing-container {
+            display: flex;
+            justify-content: center;
+            gap: 2rem;
+            flex-wrap: wrap;
+        }
+
+        .pricing-card {
+            background-color: white;
+            padding: 2rem;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            width: 250px;
+        }
+
+        .pricing-card h3 {
+            font-size: 1.5rem;
+            margin-bottom: 1rem;
+            color: #007BFF;
+        }
+
+        .pricing-card ul {
+            list-style-type: none;
+            padding: 0;
+            margin-bottom: 1.5rem;
+        }
+
+        .pricing-card ul li {
+            font-size: 1.1rem;
+            margin: 0.5rem 0;
+            color: #333;
+        }
+
+        .order-now,
+        .more-details {
+            display: inline-block;
+            padding: 0.75rem 1.5rem;
+            background-color: #007BFF;
+            color: white;
+            border-radius: 5px;
+            text-decoration: none;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+            margin-top: 0.5rem;
+        }
+
+        .order-now:hover,
+        .more-details:hover {
+            background-color: #0056b3;
+            transform: scale(1.05);
+        }
+
+        .more-details {
+            background-color: #28a745;
+            /* Green background for more details button */
+        }
+
+        .more-details:hover {
+            background-color: #218838;
+        }
+
+        .navbar-collapse .nav-item {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+        }
+
+        .whatsapp-float {
+            position: fixed;
+            width: 60px;
+            height: 60px;
+            bottom: 40px;
+            right: 40px;
+            background-color: #25d366;
+            color: #fff;
+            border-radius: 50%;
+            text-align: center;
+            font-size: 30px;
+            box-shadow: 2px 2px 3px #999;
+            z-index: 100;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+
+        .whatsapp-float {
+            position: fixed;
+            width: 60px;
+            height: 60px;
+            bottom: 40px;
+            right: 40px;
+            background-color: #25d366;
+            color: #fff;
+            border-radius: 50%;
+            text-align: center;
+            font-size: 30px;
+            box-shadow: 2px 2px 3px #999;
+            z-index: 100;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .whatsapp-float:hover {
+            background-color: #128C7E;
+            transform: scale(1.1);
+        }
+
+        .whatsapp-icon {
+            width: 100px;
+            height: 100px;
+        }
+
         @keyframes fadeIn {
             from {
                 opacity: 0;
             }
+
             to {
                 opacity: 1;
+            }
+
+
+        }
+
+
+
+
+
+
+
+
+
+        @media (max-width: 768px) {
+            .sample {
+                width: calc(50% - 2rem);
+                /* Two in a row on tablets */
+            }
+
+          
+           You said:
+    .sample {
+                width: calc(50% - 2rem);
+                /* Two in a row on tablets */
+            }
+
+            .nav-links {
+                display: none;
+                /* Initially hidden */
+                flex-direction: column;
+                /* Stack links vertically */
+                position: absolute;
+                /* Dropdown positioning */
+                top: 80px;
+                /* Space below the nav bar */
+                right: 0;
+                left: 0;
+                /* Full width */
+                background-color: #2c3e50;
+                /* Dark background for contrast */
+                box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+                /* Softer shadow for depth */
+                border-radius: 8px;
+                /* Less rounded corners */
+                z-index: 100;
+                /* Appear above other elements */
+                padding: 0.5rem;
+                /* Padding around the dropdown */
+                transition: all 0.3s ease;
+                /* Smooth open/close */
+
+                /* ####### New Code ########## */
+                /* for make list in a container */
+                contain: content;
+                /* ########################### */
+            }
+
+            /* ####### New Code ########## */
+            /* for proper visibilty of list items */
+            .nav-links li {
+                display: flex;
+                contain: content;
+            }
+
+            /* ########################### */
+
+            .nav-links a {
+                padding: 1.5rem;
+                /* Increased padding for larger clickable area */
+                margin: 0.5rem 0;
+                /* Slight margin to separate buttons */
+                background-color: #2980b9;
+                /* Background color for links */
+                border-radius: 5px;
+                /* Subtle rounding for links */
+                font-size: 1.25rem;
+                /* Reasonable font size for readability */
+                text-align: center;
+                color: #ffffff;
+                /* White text */
+                text-decoration: none;
+                /* Remove underline */
+                transition: background-color 0.3s ease, transform 0.3s ease;
+                /* Smooth transitions */
+                width: calc(100% - 1rem);
+                /* Make buttons full width minus margin */
+                box-sizing: border-box;
+                /* Include padding and border in element's total width */
+            }
+
+            /* Hover effects */
+            .nav-links a:hover {
+                background-color: #1f6396;
+                /* Darker hover color */
+                color: #ecf0f1;
+                /* Lighter text on hover */
+                transform: scale(1.05);
+                /* Slightly increase size on hover */
+                box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+                /* Shadow on hover for depth */
+            }
+
+            .nav-links.show {
+                display: flex;
+                /* Show nav links when hamburger is clicked */
+            }
+
+            .hamburger {
+                display: block;
+                /* Show hamburger on mobile */
+            }
+
+
+            .nav-links.active {
+                display: flex;
+            }
+
+            nav {
+                justify-content: space-between;
+            }
+
+            .hero h1 {
+                font-size: 2rem;
+                /* Adjusted font size */
+            }
+
+            .hero p {
+                font-size: 1rem;
+            }
+
+            .hero button {
+                font-size: 1rem;
+                padding: 0.5rem 1rem;
+            }
+
+            .features h2 {
+                font-size: 1.5rem;
+            }
+
+            .feature {
+                width: 48%;
+                /* Slightly smaller for two in a row */
+                margin: 1% auto;
+                /* Center align them */
+            }
+
+            .testimonials h2 {
+                font-size: 1.5rem;
+            }
+
+            .faq h2 {
+                font-size: 1.5rem;
+            }
+
+            .question h3 {
+                font-size: 1rem;
             }
         }
     </style>
 </head>
 
 <body>
-    <!-- Top Bar -->
     <div class="top-bar">
-        <img src="images/call.png" alt="Phone Icon" class="phone-icon">
+        <img src="images/call.png" alt="Phone Icon" class="phone-icon"> <!-- Replace with an actual icon -->
         <span>Call Us: <a href="tel:+442032893891">+44 203 289 3891</a></span>
     </div>
-
-    <!-- Header and Navigation -->
     <header>
         <nav>
             <div class="logo">
                 <img src="images/logo (2).png" alt="Company Logo">
             </div>
-            <div class="hamburger" id="hamburger">&#9776;</div>
+            <div class="hamburger" id="hamburger">
+                &#9776; <!-- Hamburger icon -->
+            </div>
             <ul class="nav-links" id="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="About us.html">About Us</a></li>
@@ -237,17 +694,19 @@
         </nav>
     </header>
 
-    <!-- Hero Section -->
+
+
     <main>
         <section class="hero" id="home">
             <div class="hero-content">
                 <h1>Welcome to The Inscribe.co</h1>
-                <div class="sentence">Your one stop for <span class="changing-words"></span></div>
+                 <div class="sentence">
+        Your one stop for  
+          <span class="changing-words"></span>
+              </div><br>
                 <button id="learnMoreButton" class="learn-more-button">Learn More</button>
             </div>
         </section>
-
-        
         <section class="samples" id="samples">
             <h2>Our Samples</h2>
             <div class="sample-container">
