--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             background: #007BFF;
             color: white;
             padding: 1rem 2rem;
-            font-size: 1.5rem;
+            font-size: 10px;
             font-weight: 400;
             font-family: 'Roboto', sans-serif;
             overflow: hidden;
