--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         .hero {
             height: 100vh;
-            background: url('images/Artboard.jpg') no-repeat center center/cover;
+            background: url('images/bg.png') no-repeat center center/cover;
             color: darkblue;
             display: flex;
             justify-content: center;
