--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 }
 
 .hero button {
-    background-color: #007BFF;
+    background-color: dark blue;
     color: white;
     border: none;
     padding: 0.75rem 1.5rem; /* Reduced padding */
@@ -205,7 +205,7 @@
 
        
         .marquee {
-            background: #007BFF;
+            background: dark blue;
             color: white;
             padding: 1rem 2rem;
             font-size: 12px;
