--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
 
 .hero h1 {
      font-family: 'Great Vibes', cursive; /* or any decorative Google Font */
-    font-size: 3rem;
-    color: #4a4a4a;
+    font-size: 5rem;
+    color: white;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
     letter-spacing: 1px;
     margin-bottom: 1rem;
