--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
         right: 0;
         left: 0;
         bottom: 0;
-        background-color: rgba(44, 62, 80, 1.0); /* Dark background with 90% opacity */
+        background-color: rgba(44, 62, 80, 0.9); /* Dark background with 90% opacity */
         box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
         z-index: 100;
         padding: 2rem;
@@ -612,8 +612,9 @@
 
             .nav-links li {
                 display: block;
-                margin: 20px 0;
+                margin: 30px 0;
                 border-bottom: 1px solid #ffffff;
+                  padding-bottom: 10px;
                 width: 100%;
             }
 
