--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 }
 
 .hero button {
-    background-color: #008080;
+    background-color: #0056b3;
     color: white;
     border: none;
     padding: 0.75rem 1.5rem; /* Reduced padding */
@@ -204,7 +204,7 @@
 }
 
         .marquee {
-    background: #008080;
+    background: #0056b3;
     color: white;
     padding: 0.75rem 1rem; /* Increased padding to increase height */
     font-size: 12px;
